# CodeAnalyzer

./: .gitignore  CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md  build.sh  main.py  test.cpp  test_advanced.cpp  test_workflow.sh
_codeql_build_dir/: inheritance_extractor
src/: inheritance_extractor.cpp
